<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Messenger</string>
    <string name="next_step">Next step</string>
    <!--Title-->
    <string name="title_code">Enter code</string>
    <string name="title_contacts">Contacts</string>

    <!--Snack-->
    <string name="snack_success">Success</string>
    <string name="snack_failure">Failure</string>
    <string name="snack_code_send">Code send</string>

    <!--Enter code-->
    <string name="enter_code">Code</string>

    <!--Enter phone-->
    <string name="hint_phone_number">Phone number</string>
    <string name="code">code</string>
    <string name="country_code_ru">+7</string>
    <string name="search">search</string>
    <string name="label_sign_out">Sign out</string>

    <!--State-->
    <string name="state_online" translatable="false">Online</string>
    <string name="state_offline" translatable="false">Offline</string>
    <string name="label_btn_send">send</string>
    <string name="label_input_message">Input message…</string>
    <string name="label_nav_all_chats">All chats</string>
    <string name="label_nav_contacts">Contacts</string>
    <string name="label_nav_settings">Settings</string>
    <string name="label_nav_connect_me">Connect me</string>
    <string name="label_nav_help">Help</string>
    <string name="label_nav_user_profile" translatable="false">Profile</string>
    <string name="label_account" translatable="false">Account</string>
    <string name="label_phone_number" translatable="false">Phone number</string>
    <string name="label_username" translatable="false">Username</string>
    <string name="label_fullname" translatable="false">Fullname</string>
    <string name="label_bio" translatable="false">Bio</string>
    <string name="label_save" translatable="false">save</string>
    <string name="transition_username" translatable="false">transition_edit_username</string>
    <string name="description_write_message" translatable="false">write new message</string>
    <string name="description_user_avatar" translatable="false">user avatar</string>
    <string name="authTransitionName" translatable="false">auth_transition_name</string>
    <string name="description_change_image" translatable="false">change image</string>
    <string name="label_btn_change" translatable="false">change</string>

</resources>