<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_phone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_padding"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/primary_padding"
        app:cardElevation="@dimen/primary_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/primary_padding">

            <st.slex.messenger.main.ui.core.CustomTextView
                android:id="@+id/phoneTextView"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+79998887766" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/phoneTextView"
                android:text="@string/label_phone_number" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <st.slex.messenger.main.ui.core.CustomCardView
        android:id="@+id/usernameCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_padding"
        android:clickable="true"
        android:focusable="true"
        android:transitionName="@string/transition_username"
        app:cardCornerRadius="@dimen/primary_padding"
        app:cardElevation="@dimen/primary_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/primary_padding">

            <st.slex.messenger.main.ui.core.CustomTextView
                android:id="@+id/usernameTextView"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="StSlex" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/usernameTextView"
                android:text="@string/label_username" />
        </LinearLayout>

    </st.slex.messenger.main.ui.core.CustomCardView>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_full_name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_padding"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/primary_padding"
        app:cardElevation="@dimen/primary_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/primary_padding">

            <st.slex.messenger.main.ui.core.CustomTextView
                android:id="@+id/fullNameTextView"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Ilya" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/fullNameTextView"
                android:text="@string/label_fullname" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_bio_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_padding"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/primary_padding"
        app:cardElevation="@dimen/primary_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/primary_padding">

            <st.slex.messenger.main.ui.core.CustomTextView
                android:id="@+id/bioTextView"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                tools:text="Poor app performance can ruin the user experience and destroy your app's reputation. If it ever responds slowly, shows choppy animations, freezes, crashes, or consumes a lot of power, your users will notice. To avoid these performance problems, use the Android Profiler to measure your app's memory, CPU, and network usage." />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:labelFor="@id/bioTextView"
                android:text="@string/label_bio" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>